# mx-strmlit-1

./: README.md
mx/: lix.fish
uv-streamlit-1/: README.md  pe.txt
uv-streamlit-1/WORK/: README.MD
uv-streamlit-1/WORK/w1/: pyproject.toml  run.sh  sup.sh
w1/: panty.py  pyproject.toml
w1/src/: s1.py
