[project]
name = "StreamLitPanty"
version = "0.1.0"
description = "StreamLitTesting"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "rich>=13.9.3",
    "streamlit>=1.39.0",
]

[tool.poetry]
name = "StreamLitPanty"
version = "0.1.0"
description = "StreamLitTesting"
authors = ["BootyDance <buty@buty>"]  # Replace with your name and email

[tool.poetry.dependencies]
python = ">=3.12"
matplotlib = ">=3.9.2"
pandas = ">=2.2.3"
rich = ">=13.9.3"
streamlit = ">=1.39.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"